# exotic-iter

./: Cargo.toml  README.md
src/: alternate.rs  lib.rs
