[package]
name = "exotic-iter"
readme = "README.md"
version = "0.1.0"
description = "Exotic iterator utilities"
authors = ["Nicholas Fleck <TheBerkin@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
